<resources>
    <string name="common_display_text_retry">Retry</string>
    <string name="empty_string"> </string>
    <string name="common_button_next">Next</string>
    <string name="common_text_done">Done</string>
    <string name="error_view_text">No results found\ntab to retry</string>
    <string name="empty_view_text">No results found</string>
    <string name="error_message_email_validation">Invalid Email format</string>
    <string name="error_message_phone_email_validation">Invalid Email or Phone format</string>
    <string name="error_message_first_name_validation">Invalid first name format</string>
    <string name="error_message_last_name_validation">Invalid last name format</string>
    <string name="error_message_cpf_validation">Invalid CPF format</string>
    <string name="error_message_url_validation">Invalid url format</string>
    <string name="error_message_credit_card_validation">Invalid Credit Card format</string>
    <string name="error_message_empty_validation">This field can\'t be empty</string>
    <string name="error_message_not_equal_password">Passwords are not the same</string>
    <string name="error_message_not_equal_phone">Mobile No are not the same</string>
    <string name="default_required_validation_message">This field is required.</string>
    <string name="error_message_postal_address">Postal Address is not valid</string>
    <string name="default_required_length_message_min_max">The input must have length between %1$d
        and %2$d.
    </string>
    <string name="default_required_length_message_min">The input length must be greater than
        or equal to %1$d characters.
    </string>
    <string name="default_required_length_message_max">The input length must be less than or
        equal to %1$d characters.
    </string>
    <string name="default_regex_validation_message">The field value does not match the
        required format.
    </string>
    <string name="error_passcode_sequence">Sequential numbers are not allowed</string>
    <string name="error_passcode_same_digits">Repetitive numbers are not allowed</string>
    <string name="error_pin_code_not_same_digits">This doesn\'t match the previously entered PIN</string>
    <string name="screen_otp_verification_title_text">Verify your mobile number</string>
    <string name="screen_otp_verification_sent_verification_code">We\'ve sent a verification code to\n %1s</string>
    <string name="screen_otp_verification_resend_code">Resend code</string>
    <string name="screen_otp_verification_verify">Verify</string>
    <string name="screen_passcode_title_text">Create a 4 digit passcode to access your account </string>
    <string name="screen_passcode_terms_and_condition">By creating a passcode you agree to our \nTerms &amp; Conditions</string>
    <string name="screen_passcode_create_passcode">Create Passcode</string>
    <string name="screen_passcode_create_new_passcode">Create new passcode</string>
    <string name="screen_name_verification_title_text">What’s your name?</string>
    <string name="screen_name_verification_first_name">First Name</string>
    <string name="screen_name_verification_last_name">Last Name</string>
    <string name="screen_email_verification_screen_title_text">What\'s your preferred email address?</string>
    <string name="screen_email_verification_screen_email_address">Email address</string>
    <string name="screen_email_verification_screen_guide">Please validate your email address after signing up and we promise not to spam you.</string>
    <string name="screen_email_verification_display_text_title">Great!</string>
    <string name="screen_onboarding_success_display_text_title">Congrats, %1s!</string>
    <string name="screen_onboarding_success_verification_text_note">Due to all the excitement of our official launch, we are gradually activating as many accounts as possible to keep the app running smoothly. In the meantime, until your account is ready to be fully activated you’ll be placed in a queue.</string>
    <string name="screen_onboarding_success_display_text_sub_title">A YAP account has been created for you in less than %1s seconds!</string>
    <string name="screen_onboarding_success_display_text_sub_title_no_interval">A YAP Personal Account has been created for you!</string>
    <plurals name="screen_onboarding_success_button_text">
        <item quantity="one">Complete verification</item>
        <item quantity="other">Queue up!</item>
    </plurals>
    <string name="screen_verify_passcode_display_text_title">Enter your passcode to access your account</string>
    <string name="screen_verify_passcode_button_sign_in">Sign in</string>
    <string name="screen_verify_passcode_button_verify">Verify</string>
    <string name="screen_verify_passcode_text_forgot_password">Forgot passcode?</string>
    <string name="screen_verify_passcode_text_account_locked">Sorry, that’s too many incorrect attempts. Click on Forgot passcode to set a new one.</string>
    <string name="screen_invite_friend_display_text_title">Refer a friend</string>
    <string name="screen_invite_friend_display_text_reward">Tell your friends about us!</string>
    <string name="screen_invite_friend_display_text_referal_reward">Sharing is sweet, and it’s even better when you do it with friends. Send this special link to your special people so they change the way they bank too!</string>
    <string name="screen_invite_friend_display_text_referal_code">Share your referral link</string>
    <string name="screen_invite_friend_button_share">Share</string>
    <string name="screen_invite_friend_display_text_share_url">Hey! I just joined the Pakistan\'s newest banking app – YAP. Transform the way you bank and reserve your place in the queue to be one of the first to join me in the banking revolution.\n\n%1s</string>
    <string name="permissions_rationale_ask_again">This app may not work correctly without the requested permissions. Open the app settings screen to modify app permissions.</string>
    <string name="title_settings_dialog">Permissions Required</string>
    <string name="screen_touch_id_text_title">Would you like to use Touch ID to log in to your account?</string>
    <string name="screen_touch_id_text_description">Make sure your device settings for Touch ID are always on.</string>
    <string name="screen_touch_id_text_terms_and_condition">By clicking “Use Touch ID” you agree to our Terms &amp; Conditions</string>
    <string name="screen_touch_id_text_button">Use Touch ID</string>
    <string name="screen_touch_id_text_no_thanks">No, thanks</string>
    <string name="screen_notification_setting_text_title">Would you like to receive notifications from us?</string>
    <string name="screen_notification_setting_description">We use push notifications to give you updates about all transactions and to send important reminders about your account.</string>
    <string name="screen_notification_setting_text_yes_keep_up_to_date">Yes, keep me updated</string>
    <string name="screen_notification_setting_text_no_thanks">No, thanks</string>
    <string name="screen_waiting_list_display_text_your_place_in_queue">Your place in the queue</string>
    <string name="screen_waiting_list_display_text_waiting_behind_you">waiting behind you</string>
    <string name="screen_waiting_list_display_text_we_will_notify_you">We will notify you when you\’ve reached the top. Log back in to see your updated place in the queue.</string>
    <string name="screen_waiting_list_display_text_lead_the_bank_description">Boost yourself up the queue by %1s for every friend you refer that signs up.🚀</string>
    <string name="screen_waiting_list_display_text_want_to_jump">Want to jump the queue?</string>
    <string name="screen_waiting_list_display_text_signed_up_users">Signed up friends: %1s</string>
    <string name="screen_waiting_list_display_button_text">Bump me up the queue</string>
    <string name="screen_waiting_list_display_text_bottom_sheet_text_with_bumped_up_guide">Once your referred friends sign up, you will see their names listed below and your place in the queue bumped up by %1s spots for each friend!</string>
    <string name="screen_waiting_list_display_text_bottom_sheet_text_with_no_referred_users">You referred 0 friend(s)! 😏</string>
    <string name="screen_waiting_list_display_text_bottom_sheet_text_with_referred_users_count">You referred %1s friend(s)! 👏</string>
    <string name="screen_waiting_list_display_text_bottom_sheet_text_with_bumped_up_spots_count">You have been bumped up by %1s spots.</string>
    <string name="screen_reached_top_queue_display_text">%1s, you reached the top of the Queue!</string>
    <string name="screen_reached_top_queue_display_text_subtitle">You are now ready to fully activate and begin using your YAP account.</string>
    <string name="screen_reached_top_queue_display_text_meeting_note">Make sure you have your CNIC at hand before we proceed</string>
    <string name="screen_onboarding_congratulations_display_text_title">Congrats, %1s!</string>
    <string name="screen_onboarding_congratulations_display_text_sub_title">A YAP Personal Account has been created for you in less than %1s seconds!</string>
    <string name="screen_onboarding_congratulations_display_text_sub_title_no_interval">A YAP Personal Account has been created for you!</string>
    <string name="screen_onboarding_congratulations_display_text_iban">Here\'s your IBAN</string>
    <string name="screen_onboarding_congratulations_display_text_meeting_note">Make sure you have your Emirates ID at hand before we proceed</string>
    <string name="screen_onboarding_congratulations_button_complete_verification">Complete verification</string>
    <string name="screen_onboarding_congratulations_display_text_delay_detail_text">Due to all the excitement of our official launch, we are gradually activating as many accounts as possible to keep the app running smoothly. In the meantime, until your account is ready to be fully activated you’ll be placed in a queue.</string>
    <string name="screen_new_passcode_success_display_text_title">You’re all set!</string>
    <string name="screen_new_passcode_success_display_text_sub_title">Your new password has been created successfully</string>
</resources>