<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="co.yap.modules.dashboard.more.home.viewmodels.InviteFriendViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <include
                android:id="@+id/toolBar"
                layout="@layout/layout_invite_friend_toolbar"
                app:viewModel="@{viewModel}" />

            <TextView
                android:id="@+id/tvInviteTitle"
                style="@style/Title3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginEnd="@dimen/margin_medium"
                android:gravity="center"
                android:text="@{viewModel.state.inviteTitle}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolBar"
                tools:text="@string/screen_invite_friend_display_text_reward" />

            <ImageView
                android:id="@+id/ivInvite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_extra_large"
                android:src="@drawable/ic_invite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvInviteTitle" />

            <TextView
                android:id="@+id/tvInviteDescription"
                style="@style/ARegularGrey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_medium"
                android:gravity="center"
                android:text="@{viewModel.state.inviteDescription}"
                tools:text="@string/screen_invite_friend_display_text_referal_reward"
                app:layout_constraintBottom_toTopOf="@+id/tvReferralCode"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivInvite"
                app:layout_constraintVertical_bias="0.262" />

            <TextView
                android:id="@+id/tvReferralCode"
                style="@style/Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_medium"
                android:layout_marginBottom="@dimen/margin_small"
                android:gravity="center"
                android:text="@{viewModel.state.referralLinkTextHeading}"
                tools:text="@string/screen_invite_friend_display_text_referal_code"
                app:layout_constraintBottom_toTopOf="@+id/btnShare"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <co.yap.widgets.CoreButton
                android:id="@+id/btnShare"
                style="@style/FragmentsBtnStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_xxl"
                android:layout_marginTop="@dimen/margin_normal"
                android:layout_marginRight="@dimen/margin_xxl"
                android:layout_marginBottom="@dimen/margin_medium_large"
                android:onClick="@{(v) -> viewModel.handlePressOnButton(v.id)}"
                android:text="@{viewModel.state.buttonTitle}"
                app:btn_drawable="@drawable/ic_share_white"
                app:btn_drawable_padding_left="10"
                app:btn_drawable_padding_top="4"
                app:btn_drawable_position="right"
                app:enableCoreButton="@{true}"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>